Fix [New Feature Set] Tooltip icon is overlapping the input

--- a/src/common/TimePicker/timePicker.scss
+++ b/src/common/TimePicker/timePicker.scss
@@ -7,5 +7,11 @@
     &__label {
       text-transform: none;
     }
+
+    &__wrapper {
+      input {
+        padding: 0 16px;
+      }
+    }
   }
 }
